k8s/deployment/mongo-deployment.yaml
# Updated MongoDB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            # Mount the volume at the default MongoDB data directory
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          # Reference the PVC created above
          persistentVolumeClaim:
            claimName: mongo-pvc
